Risk sending and filter the causes